reworked /Flights and made dates inputs
